<resources>
    <string name="app_name">Upchaar</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="hint_emailId">EMAIL ID</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="btn_lbl_register">Register</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match. </string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>

    <string name="registery_successfull">Registered Successfully</string>

    <string name="please_wait">Please wait&#8230;</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you an email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Email has been sent successfully to reset your password.</string>

    <string name="title_complete_profile">PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="hint_specialization">Specialization</string>
</resources>